--- a/style.css
+++ b/style.css
@@ -641,6 +641,7 @@ h4 {
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
   z-index: 1000;
   transition: all 0.5s;
+border-radius: 10px;
 }
 
 .overlay {
@@ -653,38 +654,6 @@ h4 {
   backdrop-filter: blur(4px);
   z-index: 100;
   transition: all 0.5s;
-}
-
-.modal__header {
-  font-size: 3.25rem;
-  margin-bottom: 4.5rem;
-  line-height: 1.5;
-}
-
-.modal__form {
-  margin: 0 3rem;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  align-items: center;
-  gap: 2.5rem;
-}
-
-.modal__form label {
-  font-size: 1.7rem;
-  font-weight: 500;
-}
-
-.modal__form input {
-  font-size: 1.7rem;
-  padding: 1rem 1.5rem;
-  border: 1px solid #ddd;
-  border-radius: 0.5rem;
-}
-
-.modal__form button {
-  /* grid-column: 1 / span 2; */
-  justify-self: center;
-  margin-top: 1rem;
 }
 
 .btn--close-modal {
@@ -714,35 +683,29 @@ h4 {
   color: #bbb;
   font-size: 1.5rem;
   font-weight: 400;
-}
-@media screen and (max-width: 600px) {
-  .Modal {
-   /* max-width: 40rem; */
-  }
-  
-.modal__header {
-  font-size: 1.8rem;
-  margin-bottom: 3rem;
-  line-height: 1;
-}
 
-
-.modal__form label {
-  font-size: 1rem;
-  font-weight: 500;
 }
-
-.modal__form input {
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
-  border: 1px solid #ddd;
-  border-radius: 0.3rem;
-}
-
-.modal__form button {
-  /* grid-column: 1 / span 2; */
-  justify-self: center;
-  margin-top: 0.5rem;
+.btn--show-modal{
   padding: 10px 15px;
+  color: white;
+  margin: auto;
 }
+
+.form label,.btn{
+   display: block;
+   /* padding-left: 20px; */
+}.form input{
+  width: 100%;
+  margin: auto;
+  border-radius: 8px;
+  border: black 1px solid;
+  padding-left: 5px;
+  
+}.form{
+  font-size:medium;
+}
+@media screen and (max-width: 800px) {
+  .form{
+    font-size:small;
+  }
 }
